--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="./assets/javascript/app.js"></script>
 </body>
 
 </html>
