display question, timer start and stop complete

--- a/index.html
+++ b/index.html
@@ -18,16 +18,21 @@
                 <strong>Simpsons Trivia Game</strong>
             </h1>
             <div class="text-center">
-                <div id="timeRemaining"> Time Remaining</div>
+                <div id="timeRemaining"></div>
                 <div class="question"> Question goes here</div>
                 <div class="answers"> Answers go here</div>
+                <button btn btn id="start">Start Game</button>                
             </div>
         </div>
     </div>
-
-
-
     <script type="text/javascript" src="./assets/javascript/app.js"></script>
 </body>
-
 </html>
+
+<!-- var userChoice = $("<div>");
+    userChoice.addClass("answerchoice");
+    userChoice.html(pick.choice[i]);
+    //assign array position to it so can check answer
+    userChoice.attr("data-guessvalue", i);
+    $("#answerblock").append(userChoice); -->
+
